[package]
name = "dash"
version = "0.1.0"
edition = "2021"
authors = ["rainsin"]
description = "将视频文件转换为DASH流格式"

[dependencies]
clap = "2.33"
colored = "2.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8"
fs_extra = "1.2"
regex= "1.11.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true